# chaos_engine

./: .gitignore  Cargo.toml  README.md
examples/asteroidish/: Cargo.toml  build.rs
examples/asteroidish/res/shaders/: line.frag  line.vert  triangle.frag  triangle.vert
examples/asteroidish/src/: commands.rs  components.rs  consts.rs  events.rs  main.rs  math.rs  systems.rs
examples/asteroidish/src/components/: bounds.rs  camera.rs  mod.rs  shape.rs  transform.rs  velocity.rs
examples/asteroidish/src/renderables/: asteroid.rs  bullet.rs  mod.rs  ship.rs
examples/asteroidish/src/systems/: asteroid.rs  camera.rs  impact.rs  mod.rs  ship.rs  transform.rs
src/: engine.rs  engine_const.rs  lib.rs  logger.rs
src/commands/: cmd.rs  manager.rs  mod.rs
src/communication/: system.rs
src/device/: bindings.rs  events.rs  mod.rs  system.rs
src/ecs/: communicator.rs  component.rs  componentstore.rs  entity.rs  errors.rs  manager.rs  mod.rs  query.rs  service.rs  system.rs  world.rs
src/input/: events.rs  manager.rs  mod.rs  system.rs
src/math/: matrix.rs  mod.rs  quaternion.rs  swizzle.rs
src/math/shape/: triangle.rs
src/math/vector/: mod.rs  vec2.rs  vec3.rs  vec4.rs
src/rendering/: adapters.rs  buffer.rs  command_buffers.rs  core_renderer_utilities.rs  effect.rs  effect_factory.rs  mod.rs  render_context.rs  render_pass.rs  render_state.rs  rendering_system.rs  swapchain.rs
src/triggers/: conditions.rs  mod.rs  system.rs  trigger.rs  trigger_event_key.rs
