[package]
name = "chaos_engine"
version = "0.1.0"
authors = ["Ólafur Þór Gunnarsson <olinord@gmail.com>"]

[features]
default = ["gfx-backend-empty"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
no_gpu = ["gfx-backend-empty"]

[dev-dependencies]
chaos_engine= { path = ".", features = ["no_gpu"] }
mockall = "0.9.0"


[dependencies]
gfx-hal = "0.6.0"
winit = "0.19"
log = "0.4.11"
spirv-reflect = "0.2.3"
bitflags = "1.2.1"

gfx-backend-vulkan = { version = "0.6.1", optional = true }
gfx-backend-dx12 = { version = "0.6.0", optional = true }
gfx-backend-metal = { version = "0.6.0", optional = true }
gfx-backend-empty = { version = "0.6.0", optional = true }
