[package]
name = "chaos_engine"
version = "0.1.0"
authors = ["Ólafur Þór Gunnarsson <olinord@gmail.com>"]
edition = "2024"

[dependencies]
vulkano = {version = "0.35.2", default-features = true}
vulkano-macros = "0.35.0"
winit = "0.30.12"
log = "0.4.11"
spirv-reflect = "0.2.3"
chaos_communicator={ git="https://github.com/olinord/chaos_communicator", rev="86705ba"}