[package]
name = "asteroidish"
version = "0.1.0"
authors = ["Ólafur Þór Gunnarsson <olinord@gmail.com>"]
edition = "2018"
build="build.rs"

[build-dependencies]
shaderc = "0.6.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chaos_engine]
path="../../"
default-features = false # do not include the default features, and optionally
# cherry-pick individual features
features = ["metal"]