[package]
name = "asteroidish"
version = "0.1.0"
authors = ["Ólafur Þór Gunnarsson <olinord@gmail.com>"]
edition = "2024"
build="build.rs"

[build-dependencies]
shaderc = "0.10.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chaos_engine]
path="../../"

[dependencies]
array_tool = "1.0.0"
rand = "0.9.2"