[package]
name = "asteroidish"
version = "0.1.0"
authors = ["Ólafur Þór Gunnarsson <olinord@gmail.com>"]
edition = "2024"
build="build.rs"

[build-dependencies]
shaderc = "0.10.1"

[dependencies.chaos_engine]
path="../../"

[dependencies]
array_tool = "1.0.0"
noise = "0.9" 
rand = "0.10.2"
vulkano = {version = "0.35.2", default-features = true}
